Allow copath bytes test to run on windows
Hopefully this works now by using the URI specifically